@@ -16,6 +16,7 @@ A.F....... [ZBX-7026] removed automatic changing of "error" field when trigger a
 Changes for 2.1.5
 
 New features:
+...G...... [ZBXNEXT-836] added windows agent wmi query support with wmi.get key (wiper)
 ........S. [ZBXNEXT-1267] changed network discovery to take in account proxies when identifying discovered hosts (wiper)
 ........S. [ZBXNEXT-322] improved value cache multi-process performance by unlocking it during database requests (wiper)
 ..F.....S. [ZBX-6883] added possibility to use empty parameters in the trigger functions (Sasha)
